--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_webrtc: ^0.8.7
+  mqtt_client: ^9.6.8
   path_provider: ^2.0.11
   http: ^0.13.4
   web_socket_channel: ^2.2.0
