--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 2.2.3
 homepage: 1.2.2
 
 environment:
-  sdk: '>=2.15.0 <3.0.0'
-  flutter: ">=1.10.0"
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter_web_plugins:
@@ -20,7 +20,7 @@ dependencies:
   stream_channel: 2.1.2
   uuid: 4.5.1
   logging: 1.3.0
-  collection: 1.18.0
+  collection: 1.19.0
   path: 1.9.0
 
 dev_dependencies:
