--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ version: 2.2.3
 homepage: https://github.com/shivanshtalwar0/flutter_janus_client
 
 environment:
-  sdk: '>=2.15.0 <3.0.0'
-  flutter: ">=1.10.0"
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter_web_plugins:
     sdk: flutter
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.8.7
+  flutter_webrtc: 0.8.12
   mqtt_client: 10.5.1
   path_provider: 2.1.5
   http: 1.2.2
@@ -20,7 +20,7 @@ dependencies:
   stream_channel: 2.1.2
   uuid: 4.5.1
   logging: 1.3.0
-  collection: 1.18.0
+  collection: 1.19.0
   path: 1.9.0
 
 dev_dependencies:
