--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,8 @@ description: Demonstrates how to use the janus_client plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
