--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: janus_client
 description: A plugin that allows the flutter app to communicate with a Janus server using different transport mechanisms, such as WebSocket and HTTP(rest). It features a developer-friendly api to interact with various WebRTC Janus Plugins. Hence, it can be considered as a swiss-knife for WebRTC solutions.
 version: 2.2.3
-homepage: https://github.com/shivanshtalwar0/flutter_janus_client
+homepage: 1.3.0
 
 environment:
   sdk: ">=3.6.0 <4.0.0"
@@ -12,11 +12,11 @@ dependencies:
     sdk: flutter
   flutter:
     sdk: flutter
-  flutter_webrtc: 0.8.12
+  flutter_webrtc: 0.12.8
   mqtt_client: 10.5.1
   path_provider: 2.1.5
-  http: 1.2.2
-  web_socket_channel: 3.0.1
+  http: 1.3.0
+  web_socket_channel: 3.0.2
   stream_channel: 2.1.2
   uuid: 4.5.1
   logging: 1.3.0
